// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar with routeButtons should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-1"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-4"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-2"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-2"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-8"
        >
          <mock-iconbutton
            style="color: white; margin-right: 1em;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 5h-9.12L10 2H4c-1.1 0-2 .9-2 2v13c0 1.1.9 2 2 2h7l1 3h8c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zM7.17 14.59c-2.25 0-4.09-1.83-4.09-4.09s1.83-4.09 4.09-4.09c1.04 0 1.99.37 2.74 1.07l.07.06-1.23 1.18-.06-.05c-.29-.27-.78-.59-1.52-.59-1.31 0-2.38 1.09-2.38 2.42s1.07 2.42 2.38 2.42c1.37 0 1.96-.87 2.12-1.46H7.08V9.91h3.95l.01.07c.04.21.05.4.05.61 0 2.35-1.61 4-3.92 4zm6.03-1.71c.33.6.74 1.18 1.19 1.7l-.54.53-.65-2.23zm.77-.76h-.99l-.31-1.04h3.99s-.34 1.31-1.56 2.74c-.52-.62-.89-1.23-1.13-1.7zM21 20c0 .55-.45 1-1 1h-7l2-2-.81-2.77.92-.92L17.79 18l.73-.73-2.71-2.68c.9-1.03 1.6-2.25 1.92-3.51H19v-1.04h-3.64V9h-1.04v1.04h-1.96L11.18 6H20c.55 0 1 .45 1 1v13z"
              />
            </svg>
          </mock-iconbutton>
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-11"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-10"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-7"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-6"
              />
              <a
                class="NavBar-menuItemLink-9"
                href="/dashboard"
              >
                <mock-menuitem
                  classname="NavBar-menuItem-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                          opacity=".3"
                        />
                        <path
                          d="M3 13h8V3H3v10zm2-8h4v6H5V5zm8 16h8V11h-8v10zm2-8h4v6h-4v-6zM13 3v6h8V3h-8zm6 4h-4V5h4v2zM3 21h8v-6H3v6zm2-4h4v2H5v-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      Dashboard
                    </div>
                  </div>
                </mock-menuitem>
              </a>
              <mock-divider
                classname="NavBar-userMenuDivider-6"
              />
              <mock-menuitem
                classname="NavBar-menuItem-8"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;

exports[`NavBar without routeButtons should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-12"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-15"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-13"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-8"
        >
          <mock-iconbutton
            style="color: white; margin-right: 1em;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 5h-9.12L10 2H4c-1.1 0-2 .9-2 2v13c0 1.1.9 2 2 2h7l1 3h8c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zM7.17 14.59c-2.25 0-4.09-1.83-4.09-4.09s1.83-4.09 4.09-4.09c1.04 0 1.99.37 2.74 1.07l.07.06-1.23 1.18-.06-.05c-.29-.27-.78-.59-1.52-.59-1.31 0-2.38 1.09-2.38 2.42s1.07 2.42 2.38 2.42c1.37 0 1.96-.87 2.12-1.46H7.08V9.91h3.95l.01.07c.04.21.05.4.05.61 0 2.35-1.61 4-3.92 4zm6.03-1.71c.33.6.74 1.18 1.19 1.7l-.54.53-.65-2.23zm.77-.76h-.99l-.31-1.04h3.99s-.34 1.31-1.56 2.74c-.52-.62-.89-1.23-1.13-1.7zM21 20c0 .55-.45 1-1 1h-7l2-2-.81-2.77.92-.92L17.79 18l.73-.73-2.71-2.68c.9-1.03 1.6-2.25 1.92-3.51H19v-1.04h-3.64V9h-1.04v1.04h-1.96L11.18 6H20c.55 0 1 .45 1 1v13z"
              />
            </svg>
          </mock-iconbutton>
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-22"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-21"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-18"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-17"
              />
              <a
                class="NavBar-menuItemLink-20"
                href="/dashboard"
              >
                <mock-menuitem
                  classname="NavBar-menuItem-19"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                          opacity=".3"
                        />
                        <path
                          d="M3 13h8V3H3v10zm2-8h4v6H5V5zm8 16h8V11h-8v10zm2-8h4v6h-4v-6zM13 3v6h8V3h-8zm6 4h-4V5h4v2zM3 21h8v-6H3v6zm2-4h4v2H5v-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      Dashboard
                    </div>
                  </div>
                </mock-menuitem>
              </a>
              <mock-divider
                classname="NavBar-userMenuDivider-17"
              />
              <mock-menuitem
                classname="NavBar-menuItem-19"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;
